@@ -36,10 +36,10 @@
     },
     {
       "lib": "tinymce",
-      "version": "5.5.1",
+      "version": "4.9.11",
       "url": "https://download.tiny.cloud/tinymce/community/tinymce_$v.zip",
       "dest": "program/js",
-      "sha1": "109616f931b58186a6884dace731f1098e5ba91e",
+      "sha1": "5f5fc32b852e587294a64be8fcb8af60258f9872",
       "license": "LGPL",
       "copyright": "Copyright (c) Tiny Technologies, Inc. All rights reserved",
       "rm": "program/js/tinymce",
