@@ -39,8 +39,8 @@ function rcube_text_editor(config, id)
     abs_url = location.href.replace(/[?#].*$/, '').replace(/\/$/, ''),
     conf = {
       selector: '#' + ($('#' + id).is('.mce_editor') ? id : 'fake-editor-id'),
-      cache_suffix: 's=5050100',
-      theme: 'silver',
+      cache_suffix: 's=40091100',
+      theme: 'modern',
       language: config.lang,
       content_css: rcmail.assets_path(config.content_css),
       content_style: config.content_style,
